--- a/config/keto/keto-dev.yml
+++ b/config/keto/keto-dev.yml
@@ -2,6 +2,9 @@ version: v0.12.0-alpha.0
 
 dsn: memory
 
+namespaces:
+  location: file://./namespaces.keto.ts
+
 log:
   level: debug
   format: text
