--- a/config/kratos/kratos.yml
+++ b/config/kratos/kratos.yml
@@ -1,1 +1,160 @@
+version: v0.13.0
 
+dsn: memory
+dev: false
+
+serve:
+  public:
+    base_url: http://127.0.0.1:4433/
+    cors:
+      enabled: true
+      allowed_origins:
+        - http://127.0.0.1:4455
+        - http://127.0.0.1:8000
+        - http://127.0.0.1:4000
+        - https://vcl.id.vn
+        - https://identity.vcl.id.vn
+        - http://0.0.0.0:4455
+      allowed_methods:
+        - POST
+        - GET
+        - PUT
+        - PATCH
+        - DELETE
+      allowed_headers:
+        - Authorization
+        - Cookie
+        - Content-Type
+      allow_credentials: true
+      debug: true
+      exposed_headers:
+        - Content-Type
+        - Set-Cookie
+  admin:
+    base_url: http://kratos:4434/
+
+selfservice:
+  default_browser_return_url: http://127.0.0.1:4455/
+  allowed_return_urls:
+    - http://127.0.0.1:4455
+    - http://127.0.0.1:8000
+    - http://127.0.0.1:4000
+    - https://vcl.id.vn
+
+  methods:
+    oidc:
+      enabled: true
+      config:
+        providers:
+          - id: discord
+            provider: discord
+            client_id: ''
+            client_secret: ''
+            mapper_url: file:///etc/config/kratos/oidc.discord.jsonnet
+            scope:
+              - email
+              - identify
+            requested_claims:
+              id_token:
+                email:
+                email_verified:
+
+        base_redirect_uri: http://127.0.0.1:4433
+
+  flows:
+    error:
+      ui_url: http://127.0.0.1:4455/error
+
+    settings:
+      ui_url: http://127.0.0.1:4455/settings
+      privileged_session_max_age: 15m
+      required_aal: highest_available
+      after:
+        hooks:
+          - hook: web_hook
+            config:
+              method: POST
+              url: OVERWRITE_ME
+              body: file:///etc/config/kratos/id.jsonnet
+              response:
+                parse: true
+              auth:
+                type: api_key
+                config:
+                  name: Authorization
+                  value: OVERWRITE_ME
+                  in: header
+    recovery:
+      enabled: true
+      ui_url: http://127.0.0.1:4455/recovery
+      use: code
+
+    verification:
+      enabled: true
+      ui_url: http://127.0.0.1:4455/verification
+      use: code
+      after:
+        default_browser_return_url: http://127.0.0.1:4455/
+
+    logout:
+      after:
+        default_browser_return_url: http://127.0.0.1:4455/login
+
+    login:
+      ui_url: http://127.0.0.1:4455/login
+      lifespan: 10m
+
+    registration:
+      lifespan: 10m
+      ui_url: http://127.0.0.1:4455/registration
+      after:
+        oidc:
+          hooks:
+            - hook: session
+#            - hook: web_hook
+#              config:
+#                method: POST
+#                url: OVERWRITE_ME
+#                body: file:///etc/config/kratos/user.jsonnet
+#                auth:
+#                  type: api_key
+#                  config:
+#                    name: VCL-Admin
+#                    value: OVERWRITE_ME
+#                    in: header
+
+log:
+  level: debug
+  format: text
+  leak_sensitive_values: true
+
+secrets:
+  cookie:
+    - PLEASE-CHANGE-ME-I-AM-VERY-INSECURE
+  cipher:
+    - 32-LONG-SECRET-NOT-SECURE-AT-ALL
+
+ciphers:
+  algorithm: xchacha20-poly1305
+
+hashers:
+  algorithm: bcrypt
+  bcrypt:
+    cost: 8
+
+session:
+  whoami:
+    required_aal: highest_available
+
+identity:
+  default_schema_id: default
+  schemas:
+    - id: default
+      url: file:///etc/config/kratos/identity.schema.json
+
+courier:
+  smtp:
+    connection_uri: 'smtp://vcl:vcl@mail.vcl.id.vn'
+    from_address: no-reply@mail.vcl.id.vn
+    from_name: Vietnam Community League
+#  template_override_path: /etc/config/kratos/mail-templates
