--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,11 +65,13 @@ services:
     restart: on-failure
 
   keto-migrate:
+    depends_on:
+      - postgres-db
     image: oryd/keto:v0.12.0-alpha.0
     environment:
       - DSN=${DATABASE_URL}
       - LOG-LEVEL
-    command: /bin/sh -c "/usr/bin/keto -c /etc/config/keto/${KETO_CONFIG_NAME} migrate up -y >/dev/null 2>&1"
+    command: /bin/sh -c "/usr/bin/keto -c /etc/config/keto/keto.yml migrate up -y >/dev/null 2>&1"
     restart: on-failure
     volumes:
       - config-data:/etc/config
@@ -84,7 +86,7 @@ services:
     ports:
       - "4466:4466" # public
       # - "4467:4467" # admin. can be uncommented for testing- but should be removed in prod.
-    command: serve -c /etc/config/keto/${KETO_CONFIG_NAME} --dev --watch-courier
+    command: serve -c /etc/config/keto/keto.yml
     restart: on-failure
     volumes:
       - config-data:/etc/config
