--- a/.env.sample
+++ b/.env.sample
@@ -4,14 +4,16 @@ LOG_LEVEL=trace
 KRATOS_URL=http://host.docker.internal:4433
 ORY_ADMIN_URL=http://host.docker.internal:4434 # the administrative one for kazusa (port should not be publically exposed)
 ORY_AUTH_BEARER = none
+JWKS_URL=http://host.docker.internal:4456/.well-known/jwks.json
 
 KRATOS_CONFIG_NAME=kratos-dev.yml
 KETO_CONFIG_NAME=keto-dev.yml
+OATHKEEPER_CONFIG_NAME=oathkeeper-dev.yml
 
 HOST_ADDR=0.0.0.0:4000
-SITE_URL=http://127.0.0.1:4000
+SITE_URL=http://127.0.0.1:4455/
 
-DATABASE_URL=postgresql://vcl:vcl@host.docker.internal/kazusa
+DATABASE_URL=postgresql://vcl:vcl@host.docker.internal:5432/kazusa
 REDIS_URL=redis://host.docker.internal:6379/0
 
 SELFSERVICE_FLOWS_SETTINGS_AFTER_HOOKS_0_CONFIG_URL=http://kazusa:4000/admin/settings-callback
